@@ -309,6 +309,13 @@ sub _process_details_page {
     # get all services
     my $services = $c->{'db'}->get_services( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'services' ), $servicefilter ], sort => { $backend_order => $sortoptions->{$sortoption}->[0] }, pager => $c );
 
+    $c->stash->{'num_hosts'} = 0;
+    if(scalar @{$services} == 0) {
+        # try to find matching hosts, maybe we got some hosts without service
+        my $host_stats = $c->{'db'}->get_host_stats( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'hosts' ), $hostfilter ] );
+        $c->stash->{'num_hosts'} = $host_stats->{'total'};
+    }
+
     my $view_mode = $c->{'request'}->{'parameters'}->{'view_mode'} || 'html';
     if( defined $view_mode and $view_mode eq 'xls' ) {
         Thruk::Utils::Status::set_selected_columns($c);
