@@ -6,6 +6,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
           - added column filter in configuration page (Thibault Cohen)
           - faster and more useably mouseover in host/service lists
           - added configuration only backends
+          - show link to hostdetails when no services match
           - config tool:
             - preserve inline comments if possible
             - added enable/disable actions
